Fix mvn test
Open all the artifacts to the unnamed module where the tests are running
from, allowing them to use reflection and internal api.